# webkit2gtk-rs

./: .gitignore  .gitmodules  .license_template  .travis.yml  CHANGELOG.md  Cargo.toml  Gir.toml  LICENSE  Makefile  README.md  gir-webkit2.toml  rustfmt.toml  search-index.js  settings.html  source-files.js
.changes/: 15.md  2_40.md  36.md  bump-gtk-webkit2gtk-version.md  config.json  doc-fix.md  dox.md  gtk018.md  javascriptcore.md  jsclock.md  major.md  regen.md  soup.md  sys.md  trait-doc.md  transfer-full.md  transfer-none.md  type.md  url.md  ver.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  build.yml  covector-version-or-publish.yml  docs.yml
example/: Cargo.toml
examples/: main.rs
gir/: Gir_WebKit.toml
implementors/webkit2gtk/: trait.WebViewExt.js
src/: credential.rs  javascript_result.rs  lib.rs  rt.rs  script_dialog.rs  web_context.rs  web_view.rs  website_data_manager.rs
src/auto/: application_info.rs  authentication_request.rs  automation_session.rs  back_forward_list.rs  back_forward_list_item.rs  color_chooser_request.rs  context_menu.rs  context_menu_item.rs  cookie_manager.rs  credential.rs  device_info_permission_request.rs  download.rs  editor_state.rs  enums.rs  favicon_database.rs  file_chooser_request.rs  find_controller.rs  flags.rs  form_submission_request.rs  geolocation_manager.rs  geolocation_permission_request.rs  geolocation_position.rs  hit_test_result.rs  input_method_context.rs  input_method_underline.rs  install_missing_media_plugins_permission_request.rs  itp_first_party.rs  itp_third_party.rs  javascript_result.rs  media_key_system_permission_request.rs  memory_pressure_settings.rs  mime_info.rs  mod.rs  navigation_action.rs  navigation_policy_decision.rs  network_proxy_settings.rs  notification.rs  notification_permission_request.rs  option_menu.rs  option_menu_item.rs  (+33 more)
src/webkit2gtk/: lib.rs.html  script_dialog.rs.html  web_view.rs.html
sys/: CHANGELOG.md  Cargo.toml  Gir.toml  build.rs  versions.txt
sys/src/: lib.rs
sys/tests/: abi.rs  constant.c  layout.c
webkit2gtk/: all.html  constant.NONE_AUTHENTICATION_REQUEST.html  constant.NONE_AUTOMATION_SESSION.html  constant.NONE_BACK_FORWARD_LIST.html  constant.NONE_BACK_FORWARD_LIST_ITEM.html  constant.NONE_COLOR_CHOOSER_REQUEST.html  constant.NONE_CONTEXT_MENU.html  constant.NONE_CONTEXT_MENU_ITEM.html  constant.NONE_COOKIE_MANAGER.html  constant.NONE_DEVICE_INFO_PERMISSION_REQUEST.html  constant.NONE_DOWNLOAD.html  constant.NONE_EDITOR_STATE.html  constant.NONE_FAVICON_DATABASE.html  constant.NONE_FILE_CHOOSER_REQUEST.html  constant.NONE_FIND_CONTROLLER.html  constant.NONE_FORM_SUBMISSION_REQUEST.html  constant.NONE_GEOLOCATION_MANAGER.html  constant.NONE_GEOLOCATION_PERMISSION_REQUEST.html  constant.NONE_HIT_TEST_RESULT.html  constant.NONE_INPUT_METHOD_CONTEXT.html  constant.NONE_INSTALL_MISSING_MEDIA_PLUGINS_PERMISSION_REQUEST.html  constant.NONE_NAVIGATION_POLICY_DECISION.html  constant.NONE_NOTIFICATION.html  constant.NONE_NOTIFICATION_PERMISSION_REQUEST.html  constant.NONE_OPTION_MENU.html  constant.NONE_PERMISSION_REQUEST.html  constant.NONE_PLUGIN.html  constant.NONE_POINTER_LOCK_PERMISSION_REQUEST.html  constant.NONE_POLICY_DECISION.html  constant.NONE_PRINT_CUSTOM_WIDGET.html  constant.NONE_PRINT_OPERATION.html  constant.NONE_RESPONSE_POLICY_DECISION.html  constant.NONE_SECURITY_MANAGER.html  constant.NONE_SETTINGS.html  constant.NONE_URI_REQUEST.html  constant.NONE_URI_RESPONSE.html  constant.NONE_URI_SCHEME_REQUEST.html  constant.NONE_USER_CONTENT_MANAGER.html  constant.NONE_USER_MEDIA_PERMISSION_REQUEST.html  constant.NONE_USER_MESSAGE.html  (+221 more)
webkit2gtk-sys/: CHANGELOG.md  Cargo.toml  Gir.toml  build.rs  versions.txt
webkit2gtk-sys/src/: lib.rs
webkit2gtk-sys/tests/: abi.rs  constant.c  layout.c
webkit2gtk_sys/: all.html  constant.WEBKIT_AUTHENTICATION_SCHEME_CLIENT_CERTIFICATE_REQUESTED.html  constant.WEBKIT_AUTHENTICATION_SCHEME_DEFAULT.html  constant.WEBKIT_AUTHENTICATION_SCHEME_HTML_FORM.html  constant.WEBKIT_AUTHENTICATION_SCHEME_HTTP_BASIC.html  constant.WEBKIT_AUTHENTICATION_SCHEME_HTTP_DIGEST.html  constant.WEBKIT_AUTHENTICATION_SCHEME_NEGOTIATE.html  constant.WEBKIT_AUTHENTICATION_SCHEME_NTLM.html  constant.WEBKIT_AUTHENTICATION_SCHEME_SERVER_TRUST_EVALUATION_REQUESTED.html  constant.WEBKIT_AUTHENTICATION_SCHEME_UNKNOWN.html  constant.WEBKIT_AUTOMATION_BROWSING_CONTEXT_PRESENTATION_TAB.html  constant.WEBKIT_AUTOMATION_BROWSING_CONTEXT_PRESENTATION_WINDOW.html  constant.WEBKIT_AUTOPLAY_ALLOW.html  constant.WEBKIT_AUTOPLAY_ALLOW_WITHOUT_SOUND.html  constant.WEBKIT_AUTOPLAY_DENY.html  constant.WEBKIT_CACHE_MODEL_DOCUMENT_BROWSER.html  constant.WEBKIT_CACHE_MODEL_DOCUMENT_VIEWER.html  constant.WEBKIT_CACHE_MODEL_WEB_BROWSER.html  constant.WEBKIT_CONTEXT_MENU_ACTION_BOLD.html  constant.WEBKIT_CONTEXT_MENU_ACTION_COPY.html  constant.WEBKIT_CONTEXT_MENU_ACTION_COPY_AUDIO_LINK_TO_CLIPBOARD.html  constant.WEBKIT_CONTEXT_MENU_ACTION_COPY_IMAGE_TO_CLIPBOARD.html  constant.WEBKIT_CONTEXT_MENU_ACTION_COPY_IMAGE_URL_TO_CLIPBOARD.html  constant.WEBKIT_CONTEXT_MENU_ACTION_COPY_LINK_TO_CLIPBOARD.html  constant.WEBKIT_CONTEXT_MENU_ACTION_COPY_VIDEO_LINK_TO_CLIPBOARD.html  constant.WEBKIT_CONTEXT_MENU_ACTION_CUSTOM.html  constant.WEBKIT_CONTEXT_MENU_ACTION_CUT.html  constant.WEBKIT_CONTEXT_MENU_ACTION_DELETE.html  constant.WEBKIT_CONTEXT_MENU_ACTION_DOWNLOAD_AUDIO_TO_DISK.html  constant.WEBKIT_CONTEXT_MENU_ACTION_DOWNLOAD_IMAGE_TO_DISK.html  constant.WEBKIT_CONTEXT_MENU_ACTION_DOWNLOAD_LINK_TO_DISK.html  constant.WEBKIT_CONTEXT_MENU_ACTION_DOWNLOAD_VIDEO_TO_DISK.html  constant.WEBKIT_CONTEXT_MENU_ACTION_ENTER_VIDEO_FULLSCREEN.html  constant.WEBKIT_CONTEXT_MENU_ACTION_FONT_MENU.html  constant.WEBKIT_CONTEXT_MENU_ACTION_GO_BACK.html  constant.WEBKIT_CONTEXT_MENU_ACTION_GO_FORWARD.html  constant.WEBKIT_CONTEXT_MENU_ACTION_IGNORE_GRAMMAR.html  constant.WEBKIT_CONTEXT_MENU_ACTION_IGNORE_SPELLING.html  constant.WEBKIT_CONTEXT_MENU_ACTION_INPUT_METHODS.html  constant.WEBKIT_CONTEXT_MENU_ACTION_INSERT_EMOJI.html  (+1190 more)
(+411 files in other folders)
