[package]
name = "webkit2gtk"
version = "0.5.0"
edition = "2018"
authors = ["The Gtk-rs Project Developers"]
categories = ["api-bindings", "gui"]
description = "Rust bindings for webkit-gtk library"
repository = "https://github.com/gtk-rs/webkit2gtk-rs"
license = "MIT"
homepage = "https://gtk-rs.org/"
documentation = "https://gtk-rs.github.io/webkit2gtk-rs/webkit2gtk"
keywords = ["webkit", "gtk-rs", "gnome", "GUI"]
exclude = [
    "gir-files/*",
]

[badges]
travis-ci = { repository = "gtk-rs/webkit2gtk-rs" }

[lib]
name = "webkit2gtk"

[features]
#default = ["v2_22"]
v2_2 = []
v2_4 = ["v2_2"]
v2_6 = ["v2_4", "ffi/v2_6"]
v2_8 = ["v2_6", "ffi/v2_8"]
v2_10 = ["v2_8", "ffi/v2_10"]
v2_12 = ["v2_10", "ffi/v2_12"]
v2_14 = ["v2_12", "ffi/v2_14"]
v2_16 = ["v2_14", "ffi/v2_16"]
v2_18 = ["v2_16", "ffi/v2_18"]
v2_20 = ["v2_18", "ffi/v2_20"]
v2_22 = ["v2_20", "ffi/v2_22"]
v2_24 = ["v2_22", "ffi/v2_24"]
v2_26 = ["v2_24", "ffi/v2_26"]
v2_28 = ["v2_26", "ffi/v2_28"]
v2_30 = ["v2_28", "ffi/v2_30"]

[dependencies]
bitflags = "^1.0"
libc = "^0.2"
once_cell = "1.0"
ffi = { package = "webkit2gtk-sys", path = "webkit2gtk-sys" }

[dependencies.cairo-rs]
git = "https://github.com/gtk-rs/gtk-rs-core.git"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gtk-rs.git"

[dependencies.gdk-sys]
git = "https://github.com/gtk-rs/gtk-rs.git"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core.git"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core.git"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core.git"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core.git"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core.git"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk-rs.git"

[dependencies.gtk-sys]
git = "https://github.com/gtk-rs/gtk-rs.git"

[dependencies.java_script_core]
package = "javascriptcore-rs"
git = "https://github.com/gtk-rs/javascriptcore-rs"

