[build-dependencies]
pkg-config = "0.3.7"
system-deps = "6"

[dependencies]
atk-sys = "^0.15.0"
bitflags = "^1.0"
cairo-sys-rs = "^0.15.0"
gdk-pixbuf-sys = "^0.15.0"
gdk-sys = "^0.15.0"
gio-sys = "^0.15.0"
glib-sys = "^0.15.0"
gobject-sys = "^0.15.0"
gtk-sys = "^0.15.0"
javascriptcore-rs-sys = "^0.4.0"
libc = "0.2"
pango-sys = "^0.15.0"
soup2-sys = "^0.2.0"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = [ ]
v2_6 = [ ]
v2_8 = [ "v2_6" ]
v2_10 = [ "v2_8" ]
v2_12 = [ "v2_10" ]
v2_14 = [ "v2_12" ]
v2_16 = [ "v2_14" ]
v2_18 = [ "v2_16" ]
v2_20 = [ "v2_18" ]
v2_22 = [ "v2_20" ]
v2_24 = [ "v2_22" ]
v2_26 = [ "v2_24" ]
v2_28 = [ "v2_26" ]
v2_30 = [ "v2_28" ]
v2_32 = [ "v2_30" ]
v2_34 = [ "v2_32" ]
v2_36 = [ "v2_34" ]

[lib]
name = "webkit2gtk_sys"

[package]
name = "webkit2gtk-sys"
build = "build.rs"
categories = [ "api-bindings", "gui" ]
description = "Rust binding for webkit-gtk library"
keywords = [ "webkit", "gtk-rs", "gnome", "GUI" ]
license = "MIT"
links = "web_kit2"
repository = "https://github.com/tauri-apps/webkit2gtk-rs"
version = "0.18.0"
edition = "2018"

[package.metadata.docs.rs]
features = [ "dox" ]

[package.metadata.system-deps.webkit2gtk_4_0]
name = "webkit2gtk-4.0"
version = "2.4"

  [package.metadata.system-deps.webkit2gtk_4_0.v2_6]
  version = "2.6"

  [package.metadata.system-deps.webkit2gtk_4_0.v2_8]
  version = "2.8"

  [package.metadata.system-deps.webkit2gtk_4_0.v2_10]
  version = "2.10"

  [package.metadata.system-deps.webkit2gtk_4_0.v2_12]
  version = "2.12"

  [package.metadata.system-deps.webkit2gtk_4_0.v2_14]
  version = "2.14"

  [package.metadata.system-deps.webkit2gtk_4_0.v2_16]
  version = "2.16"

  [package.metadata.system-deps.webkit2gtk_4_0.v2_18]
  version = "2.18"

  [package.metadata.system-deps.webkit2gtk_4_0.v2_20]
  version = "2.20"

  [package.metadata.system-deps.webkit2gtk_4_0.v2_22]
  version = "2.22"

  [package.metadata.system-deps.webkit2gtk_4_0.v2_24]
  version = "2.24"

  [package.metadata.system-deps.webkit2gtk_4_0.v2_26]
  version = "2.26"

  [package.metadata.system-deps.webkit2gtk_4_0.v2_28]
  version = "2.28"

  [package.metadata.system-deps.webkit2gtk_4_0.v2_30]
  version = "2.30"

  [package.metadata.system-deps.webkit2gtk_4_0.v2_32]
  version = "2.32"

  [package.metadata.system-deps.webkit2gtk_4_0.v2_34]
  version = "2.34"

  [package.metadata.system-deps.webkit2gtk_4_0.v2_36]
  version = "2.36"
