[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"

[dependencies.atk-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.cairo-sys-rs]
git = "https://github.com/gtk-rs/cairo"

[dependencies.gdk-pixbuf-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gdk-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gtk-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.javascriptcore-rs-sys]
git = "https://github.com/gtk-rs/javascriptcore-rs"

[dependencies.pango-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.soup-sys]
git = "https://github.com/gtk-rs/soup-sys-rs"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []
v2_10 = ["v2_8"]
v2_12 = ["v2_10"]
v2_14 = ["v2_12"]
v2_16 = ["v2_14"]
v2_18 = ["v2_16"]
v2_20 = ["v2_18"]
v2_6 = []
v2_8 = ["v2_6"]

[lib]
name = "webkit2gtk_sys"

[package]
build = "build.rs"
license = "MIT"
links = "web_kit2"
name = "webkit2gtk-sys"
version = "0.7.0"
