[build-dependencies]
pkg-config = "0.3.7"
system-deps = "1.3"

[dependencies]
libc = "0.2"

[dependencies.atk-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.cairo-sys-rs]
git = "https://github.com/gtk-rs/cairo"

[dependencies.gdk-pixbuf-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gdk-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gtk-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.javascriptcore-rs-sys]
git = "https://github.com/gtk-rs/javascriptcore-rs"

[dependencies.pango-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.soup-sys]
git = "https://github.com/gtk-rs/soup-sys-rs"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
v2_6 = []
v2_8 = ["v2_6"]
v2_10 = ["v2_8"]
v2_12 = ["v2_10"]
v2_14 = ["v2_12"]
v2_16 = ["v2_14"]
v2_18 = ["v2_16"]
v2_20 = ["v2_18"]
v2_22 = ["v2_20"]
v2_24 = ["v2_22"]
v2_26 = ["v2_24"]
dox = []
v2_28 = ["v2_26"]

[lib]
name = "webkit2gtk_sys"

[package]
build = "build.rs"
license = "MIT"
links = "web_kit2"
name = "webkit2gtk-sys"
version = "0.7.0"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.webkit2gtk_4_0]
name = "webkit2gtk-4.0"
version = "2.4"

[package.metadata.system-deps.webkit2gtk_4_0.feature-versions]
v2_6 = "2.6"
v2_8 = "2.8"
v2_10 = "2.10"
v2_12 = "2.12"
v2_14 = "2.14"
v2_16 = "2.16"
v2_18 = "2.18"
v2_20 = "2.20"
v2_22 = "2.22"
v2_24 = "2.24"
v2_26 = "2.26"
v2_28 = "2.28"
