[build-dependencies]
pkg-config = "0.3.7"
system-deps = "3"

[dependencies]
libc = "0.2"

[dependencies.atk-sys]
git = "https://github.com/gtk-rs/gtk-rs.git"

[dependencies.cairo-sys-rs]
git = "https://github.com/gtk-rs/gtk-rs-core.git"

[dependencies.gdk-pixbuf-sys]
git = "https://github.com/gtk-rs/gtk-rs-core.git"

[dependencies.gdk-sys]
git = "https://github.com/gtk-rs/gtk-rs.git"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core.git"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core.git"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core.git"

[dependencies.gtk-sys]
git = "https://github.com/gtk-rs/gtk-rs.git"

[dependencies.javascriptcore-rs-sys]
git = "https://github.com/gtk-rs/javascriptcore-rs"

[dependencies.pango-sys]
git = "https://github.com/gtk-rs/gtk-rs-core.git"

[dependencies.soup-sys]
git = "https://github.com/gtk-rs/soup-sys-rs"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v2_6 = []
v2_8 = ["v2_6"]
v2_10 = ["v2_8"]
v2_12 = ["v2_10"]
v2_14 = ["v2_12"]
v2_16 = ["v2_14"]
v2_18 = ["v2_16"]
v2_20 = ["v2_18"]
v2_22 = ["v2_20"]
v2_24 = ["v2_22"]
v2_26 = ["v2_24"]
dox = []
v2_28 = ["v2_26"]
v2_30 = ["v2_28"]

[lib]
name = "webkit2gtk_sys"

[package]
build = "build.rs"
license = "MIT"
links = "web_kit2"
name = "webkit2gtk-sys"
version = "0.7.0"
edition = "2018"
documentation = "https://gtk-rs.github.io/webkit2gtk-rs/webkit2gtk_sys"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.webkit2gtk_4_0]
name = "webkit2gtk-4.0"
version = "2.4"

[package.metadata.system-deps.webkit2gtk_4_0.v2_6]
version = "2.6"

[package.metadata.system-deps.webkit2gtk_4_0.v2_8]
version = "2.8"

[package.metadata.system-deps.webkit2gtk_4_0.v2_10]
version = "2.10"

[package.metadata.system-deps.webkit2gtk_4_0.v2_12]
version = "2.12"

[package.metadata.system-deps.webkit2gtk_4_0.v2_14]
version = "2.14"

[package.metadata.system-deps.webkit2gtk_4_0.v2_16]
version = "2.16"

[package.metadata.system-deps.webkit2gtk_4_0.v2_18]
version = "2.18"

[package.metadata.system-deps.webkit2gtk_4_0.v2_20]
version = "2.20"

[package.metadata.system-deps.webkit2gtk_4_0.v2_22]
version = "2.22"

[package.metadata.system-deps.webkit2gtk_4_0.v2_24]
version = "2.24"

[package.metadata.system-deps.webkit2gtk_4_0.v2_26]
version = "2.26"

[package.metadata.system-deps.webkit2gtk_4_0.v2_28]
version = "2.28"

[package.metadata.system-deps.webkit2gtk_4_0.v2_30]
version = "2.30"
